--- a/config/database.yml
+++ b/config/database.yml
@@ -51,5 +51,5 @@ production:
   <<: *default
   database: free_market_3_production
   username: root
-  password: <%= Rails.application.credentials[:database_password] %>
+  password: <%= ENV['FREE_MARKET_3_DATABASE_PASSWORD'] %>
   socket: /var/lib/mysql/mysql.sock
